--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
     <h1>Welcome to <%= title%></h1>
     <a href="/">Home</a>
     <a href="/credits">Creditos</a>
+     <a href="/quizzes">Quizzes</a>
   </body>
 </html>
